--- a/app.json
+++ b/app.json
@@ -20,7 +20,7 @@
   "window": {
     "backgroundTextStyle": "dark",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "杨10阅读",
+    "navigationBarTitleText": "爱看书城",
     "navigationBarTextStyle": "black",
     "enablePullDownRefresh": true
   },
